--- a/views/file.jade
+++ b/views/file.jade
@@ -2,7 +2,7 @@
 html(lang="en")
 	head
 		title node-coverage Admin Interface
-		link(rel="stylesheet", href="/style.css")
+		link(rel="stylesheet", href="#{serverRoot}/style.css")
 		link(href="http://fonts.googleapis.com/css?family=Inconsolata", rel="stylesheet", type="text/css")
 	body
 		h3.header node-coverage 
