--- a/views/stack.jade
+++ b/views/stack.jade
@@ -2,7 +2,7 @@
 html(lang="en")
 	head
 		title node-coverage Admin Interface
-		link(rel="stylesheet", href="/style.css")
+		link(rel="stylesheet", href="#{serverRoot}/style.css")
 	body
 		h3.header node-coverage 
 			em=name
@@ -22,6 +22,6 @@ html(lang="en")
 						-var generatedLineNumber = codeReport.fns[fn[2]]
 						tr
 							td
-								a(href="/r/#{name}/file/#{fn[0].replace(/\//g, "%2F")}") #{fn[0]}
+								a(href="#{serverRoot}/r/#{name}/file/#{fn[0].replace(/\//g, "%2F")}") #{fn[0]}
 							td=fn[1] + ": " + generatedLineNumber
 							td=codeReport.src[generatedLineNumber].s
