--- a/views/stats.jade
+++ b/views/stats.jade
@@ -2,13 +2,13 @@
 html(lang="en")
 	head
 		title node-coverage Admin Interface
-		link(rel="stylesheet", href="/style.css")
-		script(src="/jQuery/jquery.min.js", type="text/javascript")
-		script(src="/highcharts/highcharts.js", type="text/javascript")
+		link(rel="stylesheet", href="#{serverRoot}/style.css")
+		script(src="#{serverRoot}/jQuery/jquery.min.js", type="text/javascript")
+		script(src="#{serverRoot}/highcharts/highcharts.js", type="text/javascript")
 
 		script
 			var __report = !{JSON.stringify(report)}
-		script(src="/loadCharts.js", type="text/javascript")
+		script(src="#{serverRoot}/loadCharts.js", type="text/javascript")
 	body
 		h3.header node-coverage
 			em Stats & Graphs - #{name}
